p2/k8s/app3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
      - name: app3
        image: python:3.9-slim
        command: ["sh", "-c", "pip install flask && python /app/app3-flask.py"]
        ports:
        - containerPort: 80
        volumeMounts:
        - name: app3-config-volume
          mountPath: /app/app3-flask.py
          subPath: app3-flask.py
      volumes:
      - name: app3-config-volume
        configMap:
          name: app3-config
